# backends-clean-architecture

./: README.md
go/: .env  Makefile  go.mod  (+2 more)
rust/: .dockerignore  .env  .env.docker  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.cli  Makefile  README.md  docker-compose.yml  drill.yml
rust/.github/workflows/: rust.yml
rust/adapters/: Cargo.toml
rust/adapters/src/repositories/: mod.rs
rust/adapters/src/repositories/mysql/: mod.rs  user.rs
rust/api/: Cargo.toml
rust/api/src/: config.rs  extractors.rs  lib.rs  logger.rs  main.rs  routes.rs  server.rs  usecases.rs
rust/api/src/handlers/: mod.rs  users.rs  web.rs
rust/api/src/layers/: jwt.rs  logger.rs  mod.rs  states.rs
rust/api/templates/doc/: api_v1.html
rust/api/tests/: mod.rs  web.rs
rust/database/: .env  Cargo.toml
rust/database/migrations/: 20230324104229_users_table.down.sql  20230324104229_users_table.up.sql
rust/database/src/: config.rs  database.rs  databases.rs  lib.rs  main.rs
rust/database/src/mysql/: mod.rs
rust/database/src/mysql/models/: mod.rs  user.rs
rust/database/src/mysql/repositories/: mod.rs  user.rs
rust/database/tests/: mod.rs
rust/database/tests/mysql/: mod.rs  user.rs
rust/domain/: Cargo.toml
rust/domain/src/: lib.rs  main.rs
rust/domain/src/entities/: email.rs  error.rs  mod.rs  password_reset.rs  refresh_token.rs  scope.rs  user.rs
rust/domain/src/ports/: mod.rs
rust/domain/src/ports/repositories/: mod.rs  password_reset.rs  refresh_token.rs  scope.rs  user.rs
rust/domain/src/ports/requests/: email.rs  mod.rs  password_reset.rs  refresh_token.rs  user.rs
rust/domain/src/ports/responses/: mod.rs  pagination.rs  password_reset.rs  scope.rs  user.rs
rust/domain/src/ports/services/: email.rs  mod.rs  scope.rs  user.rs
rust/domain/src/repositories/: mod.rs  password_reset.rs  refresh_token.rs  scope.rs  user.rs
rust/domain/src/repositories/refresh_token/: mod.rs  request.rs  response.rs
rust/domain/src/repositories/scope/: mod.rs  request.rs  response.rs
rust/domain/src/repositories/user/: mod.rs  request.rs  response.rs
rust/domain/src/requests/: mod.rs  password_reset.rs  scope.rs  user.rs
rust/domain/src/responses/: mod.rs  pagination.rs  password_reset.rs  refresh_token.rs  scope.rs  user.rs
rust/domain/src/services/: email.rs  mod.rs  scope.rs  user.rs
rust/domain/src/services/scope/: mod.rs  request.rs  response.rs
rust/domain/src/services/user/: mod.rs  request.rs  response.rs
rust/domain/src/use_cases/: scope.rs  user.rs
rust/domain/src/use_cases/scope/: mod.rs  request.rs  response.rs
rust/domain/src/use_cases/user/: mod.rs  request.rs  response.rs
rust/domain/src/usecases/: mod.rs  scope.rs  user.rs
rust/domain/src/usercases/: mod.rs  user.rs
rust/domain/src/value_objects/: email.rs  mod.rs  password.rs
rust/domain/tests/: mod.rs
rust/domain/tests/helpers/: email.rs  mod.rs  password_reset.rs  refresh_token.rs  scope.rs  user.rs
rust/domain/tests/use_cases/: mod.rs  scope.rs  user.rs
rust/domain/tests/usecases/: scope.rs  user.rs
rust/infrastructure/: Cargo.toml  sqlx-data.json
rust/infrastructure/.sqlx/: query-000241c1db808925679a8e954e1b2bb4e0b3d2fd8edc81b0ce5ecfd6f3b2d5ed.json  query-093c80357cdf6da61c5a6aa7659f6383f427327bf57f99f29fe984314378989a.json  query-0ae5f5824d20be7ad46eda455068d81824d3e456250b87be2d22c04fc89e218a.json  query-1d6ce1a710709370d81409485dd6552906dd8f95f1f4997be4f74da5a4e3e94d.json  query-2724001e94a13b715b8427805f77192a4f952c70733cc4ea790dfe18cc45981d.json  query-2c1f4c784b02ab1a932a023ac00e0351ba5353ce64ca120d17a4661c06cc46ef.json  query-2d4f4e67f1b7ee745d61d7c3e61362a15c574c31cc2a3bc24737b0b64858196a.json  query-3147512910269cad5f221e65c4191c62bbdf3983e3c29186c4e898864dd94459.json  query-421ecf12fc914e2d1de570819b43bf77d408bbc877d307d1970a8383b0947fcd.json  query-43c6d3704aa233b165f1f095d4191accf65a53da736bcdbde86582ae9b527504.json  query-47ba8241ec98f3e624428fe96db8ff9acb11d7bd8c5800729c04878acfa0f225.json  query-49520901d03ef536e30bc49a8eddede278cdef0fd176b0ef58582234edcfd4b6.json  query-7586846c0cf2a46f8200ba06c47ee06ef7fb79fa26eb683195139b6ba093ce35.json  query-7c36c0cb42facf3da0998ce50e0d413a734ca30cb1172386fa2539f62f3214b3.json  query-9b45f97487d639bb6e208bef2a0ba9134af9495b4bd9ff09a439473a2f8e53ce.json  query-9c0427768e39188da73f4f5a1905d523c44ed45574cfd1f5289f24808fc55255.json  query-aa6283473720e06c32e2f5b2450cff96c062c4bb7b239d69ced5f71ccaf3b6d2.json  query-d210c01bfa9798e7ce178f0ae12077cac8203e6607883a8dffed40f3e70977c5.json  query-d6d958edaa03f07ed3a13054a33a3a75aa1d47b22e79f86f94a5f2c838ad81b3.json  query-d82cf1da92d2cb100f72bac4f77238c964d4aabeb70b26ea55c5b89f620787d1.json  query-dce2608c0dc413997f49bbeddc5b21e7ff4a140b9f926f555f81a79c1fd352d8.json  query-f464da0c6161180398faf55e75aecd7c4b7b88ca5cac0ba1fdabc279825e04f2.json  query-f6e8135de2527683fd04c4d6439b49a460289b7aef164b96d52090e2858deffa.json
rust/infrastructure/assets/documentation/: doc_api_v1.yml
rust/infrastructure/migrations/: 20230417121546_create_password_reset.down.sql  20230417121546_create_password_reset.up.sql  20231018130500_create_refresh_tokens_table.down.sql  20231018130500_create_refresh_tokens_table.up.sql  20240209135543_create_scopes_tables.down.sql  20240209135543_create_scopes_tables.up.sql
rust/infrastructure/src/: config.rs  lib.rs  main.rs
rust/infrastructure/src/api/: extractors.rs  mod.rs  routes.rs  server.rs  usecases.rs
rust/infrastructure/src/api/axum_rest/: extractors.rs  logger.rs  mod.rs  routes.rs  server.rs  use_cases.rs  usecases.rs
rust/infrastructure/src/cli/: mod.rs  user.rs
rust/infrastructure/src/database/: mod.rs
rust/infrastructure/src/email/: forgotten_password.rs  mod.rs
rust/infrastructure/templates/doc/: api_v1.html
rust/infrastructure/tests/: mod.rs
rust/infrastructure/tests/api/: mod.rs  users.rs  web.rs
rust/infrastructure/tests/helpers/: mod.rs  mysql.rs
rust/shared/: Cargo.toml
rust/shared/src/: auth.rs  error.rs  lib.rs  query_parameter.rs  validation.rs
rust/shared/src/test/: mod.rs  mysql.rs
rust/src/: main.rs
(+73 files in other folders)
