[workspace]
resolver = "2"
members = [
    "domain",
    "shared",
    "infrastructure",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fabien Bellanger <valentil@gmail.com>"]
repository = "https://github.com/fabienbellanger/backends-clean-architecture/rust"
readme = "./README.md"

[workspace.dependencies]
clean-architecture-domain = { path = "./domain", version = "0.1.0" }
clean-architecture-infrastructure = { path = "./infrastructure", version = "0.1.0" }
clean-architecture-shared = { path = "./shared", version = "0.1.0" }

# Serde
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_urlencoded = "0.7.1"

# Errors
thiserror = "1.0.60"

# Logs
log = "0.4.21"
tracing = "0.1.40"

# Axum
axum = "0.7.5"

# sqlx
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate"] }

async-trait = "0.1.80"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["clock", "std", "serde"], default-features = false }
jsonwebtoken = "9.3.0"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
