[package]
edition = "2021"
name = "clean-architecture-adapters"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
clean-architecture-domain = {path = "../domain"}

# sqlx
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate", "offline"]}

# Log
env_logger = "0.10.0"
log = "0.4.17"
tracing = "0.1.37"

chrono = {version = "0.4.24", features = ["clock", "std", "serde"], default-features = false}
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
thiserror = "1.0.40"
uuid = {version = "1.3.0", features = ["v4"]}
async-trait = "0.1.67"
