[package]
edition = "2021"
name = "clean-architecture-database"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
clean-architecture-domain = {path = "../domain"}
clean-architecture-shared = {path = "../shared"}

# sqlx
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate", "offline"] }

# Log
env_logger = "0.10.0"
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["clock", "std", "serde"], default-features = false }
config = "0.13.3"
dotenvy = "0.15.7"
serde = { version = "1.0.159", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
rand = "0.8.5"

