[package]
name = "clean-architecture-domain"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/fabienbellanger/backends-clean-architecture/rust/domain"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clean-architecture-shared = { workspace = true }

async-trait = "0.1.77"
chrono = { version = "0.4.34", features = ["clock", "std", "serde"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.17.0", features = ["derive"] }
tracing = "0.1.40"
tokio = { version = "1.36.0", features = ["rt", "macros"] }

[dev-dependencies]
fake = { version = "2.9.2", features = ["chrono"] }
