[package]
name = "clean-architecture-domain"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/fabienbellanger/backends-clean-architecture/rust/domain"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clean-architecture-shared = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
fake = { version = "3.0.1", features = ["chrono"] }
