[package]
name = "clean-architecture-infrastructure"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/fabienbellanger/backends-clean-architecture/rust/infrastructure"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clean-architecture-domain = { workspace = true }
clean-architecture-shared = { workspace = true }

# Axum
axum = { workspace = true }

# Tower
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "request-id", "util"] }

# Hyper
hyper = "1.4.1"

# sqlx
sqlx = { workspace = true }

# Log
log = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt", "json"] }

# Metrics
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"

async-trait = { workspace = true }
bytes = "1.6.1"
chrono = { workspace = true }
clap = { version = "4.5.11", features = ["cargo", "derive"] }
config = "0.14.0"
dotenvy = { workspace = true }
futures = "0.3.30"
http-auth-basic = "0.3.5"
jsonwebtoken = { workspace = true }
lazy_static = "1.5.0"
lettre = "0.11.7"
mime = "0.3.17"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sha2 = "0.10.8"
tera = "1.20.0"
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
http-body-util = "0.1.2"
