[package]
name = "clean-architecture-infrastructure"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/fabienbellanger/backends-clean-architecture/rust/infrastructure"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clean-architecture-domain = { workspace = true }
clean-architecture-shared = { workspace = true }

# Axum
axum = { workspace = true }

# Tower
tower = { version = "0.5.1", features = ["timeout", "util"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "request-id", "util"] }

# Hyper
hyper = "1.5.1"

# sqlx
sqlx = { workspace = true }

# Log
log = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter", "fmt", "json"] }

# Metrics
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"

async-trait = { workspace = true }
bytes = "1.9.0"
chrono = { workspace = true }
clap = { version = "4.5.22", features = ["cargo", "derive"] }
config = "0.14.1"
dotenvy = { workspace = true }
futures = "0.3.31"
http-auth-basic = "0.3.5"
jsonwebtoken = { workspace = true }
lettre = "0.11.10"
mime = "0.3.17"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sha2 = "0.10.8"
tera = "1.20.0"
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
http-body-util = "0.1.2"
bytesize = "1.3.0"
