[package]
name = "clean-architecture-shared"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/fabienbellanger/backends-clean-architecture/rust/shared"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
